colang-cli/tests/samples/features/trait-bounds/compile_error/bound_not_satisfied.co
trait IntoInt {
  fun into(self): int
}

struct Squarer<T: IntoInt> {
  fun square(self, t: T): int {
    var i = t.into();
    i * i
  }
}

struct Foo {
  x: int;
}

fun main() {
  var sq: Squarer<Foo>;
}
